--- a/srcgen/Makefile_xinterp
+++ b/srcgen/Makefile_xinterp
@@ -61,7 +61,7 @@ $(patsubst %.dats, BUILD/%_dats.o, $(SRCDATS))
 ######
 INCLUDE:=
 INCLUDE+=-I"."
-INCLUDE+=-I"$(XATSOPT)/srcgen/xats"
+INCLUDE+=-I"$(XATSOPT)/srcgen/xcomp"
 ######
 LIBRARY:=-L"$(XATSOPT)/lib" -lxatsopt
 ######
@@ -69,7 +69,7 @@ LIBRARY:=-L"$(XATSOPT)/lib" -lxatsopt
 all:: \
 lxatsopt
 lxatsopt: ; \
-(cd $(XATSOPT)/srcgen/xats && $(MAKE) libxatsopt)
+(cd $(XATSOPT)/srcgen/xcomp && $(MAKE) libxatsopt)
 #
 ######
 #
@@ -135,7 +135,7 @@ cleanall:: clean
 cleanall:: ; $(RMF) ./bin/xinterp
 cleanall:: ; $(RMF) ./bin/xinterp.sh
 cleanall:: ; $(RMF) $(XATSOPT)/lib/libxatsopt.a
-cleanall:: ; $(MAKE) -C $(XATSOPT)/srcgen/xats cleanall
+cleanall:: ; $(MAKE) -C $(XATSOPT)/srcgen/xcomp cleanall
 
 ######
 
