Updating: very very minorly

--- a/srcgen/TEST/Makefile_output
+++ b/srcgen/TEST/Makefile_output
@@ -270,6 +270,12 @@ test-2020-07-01: ; \
 $(ECHO) "Hello, world!" | \
 $(XINTERP) -d ./xatslib_githwxi/test-2020-07-01.dats
 
+#test:: \
+#test-2020-07-02
+#test-2020-07-02: ; \
+#$(ECHO) "Hello, world!" | \
+#$(XINTERP) -d ./xatslib_githwxi/test-2020-07-02.dats
+
 test:: \
 test-2020-07-03
 test-2020-07-03: ; \
