--- a/srcgenx/TEST/Makefile_output
+++ b/srcgenx/TEST/Makefile_output
@@ -341,6 +341,11 @@ test-2022-01-01: ; \
 $(ECHO) "hello!" | \
 $(XINTERP) -d ./xatslib_githwxi/test-2022-01-01.dats
 
+test:: \
+test-2022-06-04
+test-2022-06-04: ; \
+$(XINTERP) -d ./xatslib_githwxi/test-2022-06-04.dats
+
 ######
 #
 # HX: for cleaning up
