--- a/srcgenx/Makefile_xinterp
+++ b/srcgenx/Makefile_xinterp
@@ -44,10 +44,10 @@ xinterp.sats \
 
 SRCDATS := \
 intrep0.dats \
-intrep0_print.dats \
+intrep0_print0.dats \
 intrep0_dynexp.dats \
-xinterp_main0.dats \
-xinterp_print.dats \
+xinterp_mymain.dats \
+xinterp_print0.dats \
 xinterp_envmap.dats \
 xinterp_dynexp.dats \
 
